#pragma once

#include "Person/Person.hpp"
class Bank : public Person
{
private:
    /* data */
public:
    Bank(/* args */);
    ~Bank();
};
