#pragma once

#include "Person/Person.hpp"

class Player : public Person
{
private:
    /* data */
public:
    Player(/* args */);
    ~Player();
};